--- a/assets/css/wiki.css
+++ b/assets/css/wiki.css
@@ -29,6 +29,7 @@ body {
 
 /* Sidebar */
 .sidebar {
+    margin-top: 80px;
     background: var(--sidebar-bg);
     color: var(--sidebar-text);
     width: 220px;
@@ -36,6 +37,7 @@ body {
     transition: transform 0.3s ease;
     position: relative;
     z-index: 10;
+    border-radius: 0 15px 15px 0;
 }
 
 .sidebar nav a {
