ajout pages get et prices

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -7,7 +7,7 @@
         <ul class="navbar-links">
             <li><a href="index.html">Accueil</a></li>
             <li><a href="wiki.html">Wiki</a></li>
-            <li><a href="https://github.com/taran35/SiCSy/releases" target="_blank" rel="noopener noreferrer">Téléchargement</a></li>
+            <li><a href="get.html" target="_blank" rel="noopener noreferrer">Obtenir</a></li>
             <li><a href="https://paypal.me/TaranGauvry" target="_blank" rel="noopener noreferrer">Faire un don</a>
             </li>
         </ul>
